--- a/Calculator/App.xaml
+++ b/Calculator/App.xaml
@@ -12,12 +12,12 @@
             <Setter Property="FontSize"
                     Value="18" />
             <Setter Property="Background"
-                    Value="Black" />
+                    Value="#000000" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
                         <Border Background="{TemplateBinding Background}"
-                                BorderBrush="Black"
+                                BorderBrush="#000000"
                                 BorderThickness="0"
                                 CornerRadius="5">
                             <ContentPresenter HorizontalAlignment="Center"
@@ -26,6 +26,13 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsEnabled"
+                         Value="False">
+                    <Setter Property="Foreground"
+                            Value="#000000" />
+                </Trigger>
+            </Style.Triggers>
         </Style>
 
         <Style TargetType="Button"
@@ -97,8 +104,6 @@
                     Value="0" />
             <Setter Property="Background"
                     Value="Transparent" />
-            <Setter Property="Foreground"
-                    Value="Black" />
             <Setter Property="Padding"
                     Value="5" />
             <Setter Property="Template">
